# ecloChallenge

scripts/: runTest.sh
src/: CMakeLists.txt  FloorDetect.cpp
